IPythonConsoleIntegration updated (after GSoC)

--- a/Docs/MolView3D/GSoC2017_notebook_4_visualizing_multiple_ligands.ipynb
+++ b/Docs/MolView3D/GSoC2017_notebook_4_visualizing_multiple_ligands.ipynb
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "nm_2 = ChemUtils.ExtractMolFragment(nm_1.rest, ResName = 'SO4')\n",
+    "nm_2 = LigandExtract.ExtractMolFragment(nm_1.rest, ResName = 'SO4')\n",
     "nm_2"
    ]
   },
